minor button alignment fix

--- a/src/components/PurchaseFooter/PurchaseFooter.module.less
+++ b/src/components/PurchaseFooter/PurchaseFooter.module.less
@@ -16,7 +16,6 @@
     margin: auto;
     display: flex;
     align-items: center;
-    justify-content: space-between;
   }
 }
 .scrolled {
@@ -31,4 +30,5 @@
   font-weight: 600;
   padding: 4px 16px 6px;
   outline: none;
+  margin-left: 16px;
 }
